<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="com.somecompanydomain.cryptoprice.MainActivity">

    <FrameLayout
        android:id="@+id/progressBarHolder"
        android:animateLayoutChanges="true"
        android:visibility="gone"
        android:alpha="0.4"
        android:background="#000000"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:layout_gravity="center" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/tipsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/tableLayout"
        android:layout_marginTop="15dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/currentTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:text="@string/for_current_time"
            android:textColor="@color/fontColour"
            android:textSize="16sp"/>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="false"
            android:layout_alignParentRight="false"
            android:layout_below="@+id/tableLayout"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/baseText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="@string/base"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/fontColour"
                android:textSize="22sp"
                />

            <Spinner
                android:id="@+id/currency_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1.9dp"
                android:backgroundTint="@android:color/white"
                android:dropDownSelector="@color/fontColour"
                android:gravity="center_horizontal"
                android:spinnerMode="dropdown"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tipForA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_for_a"
            android:textColor="@color/fontColour"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/tipForB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_for_b"
            android:textColor="@color/fontColour"
            android:textSize="15sp"/>

    </LinearLayout>

    <include layout="@layout/table_layout" android:id="@+id/tableLayout" />

</RelativeLayout>
